--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,9 +1,13 @@
-:80 {
+:443 {
  root /home/caddy/www/
  timeouts none
  gzip
  tls off
  proxy  /file 127.0.0.1:8080 {
+   transparent
+   websocket
+ }
+  proxy  /jsonrpc 127.0.0.1:6800 {
    transparent
    websocket
  }
